--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,7 @@ indent_size = 2
 end_of_line = lf
 charset = utf-8
 max_length = 120
+quote_type = single
 trim_trailing_whitespace = true
 insert_final_newline = true
 
