--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "openapi-to-postmanv2",
-  "version": "3.1.0",
+  "name": "@paloaltonetworks/openapi-to-postmanv2",
+  "version": "3.1.0-hotfix.1",
   "description": "Convert a given OpenAPI specification to Postman Collection v2.0",
-  "homepage": "https://github.com/postmanlabs/openapi-to-postman",
-  "bugs": "https://github.com/postmanlabs/openapi-to-postman/issues",
+  "homepage": "https://github.com/PaloAltoNetworks/openapi-to-postman",
+  "bugs": "https://github.com/PaloAltoNetworks/openapi-to-postman/issues",
   "repository": {
     "type": "git",
-    "url": "git://github.com/postmanlabs/openapi-to-postman.git"
+    "url": "git://github.com/PaloAltoNetworks/openapi-to-postman.git"
   },
   "keywords": [
     "openapi",
@@ -125,7 +125,7 @@
     "lodash": "4.17.21",
     "oas-resolver-browser": "2.5.2",
     "path-browserify": "1.0.1",
-    "postman-collection": "4.0.0",
+    "@paloaltonetworks/postman-collection": "^4.1.0",
     "yaml": "1.10.2"
   },
   "author": "Postman Labs <help@getpostman.com>",
