--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-      - run: npm install
+      - run: npm ci
       - run: npm run test-lint
       - run: npm run test-system
       - run: npm run test-unit
